    Storage. Only oauth2 is supported now. This was necessitated by
    the switch to Google's native API (before S3QL was using Google's
    S3 compatibility layer).

  * Command line options specified in the authinfo file (in particular
    --backend-options) are now parsed correctly.

  * S3QL now uses python-cryptography instead of the (no longer
    maintained) pycrypto module.

2018-12-28, S3QL 2.33

  * Fixed a sporadic test failure in t5_cache.py.

2018-11-06, S3QL 2.32

  * Fixed a potential bug in s3qlrm that would probably lead to a
    filesystem crash (hasn't actually been observed though).

  * Clarified installation instructions: S3QL requires the official
    systemd Python module, not the (third-party) module on PyPi.

  * Fixed occasional crashes with a "dugong.StateError" exception.
    Thanks to Roger Gammans for extensive testing!

  * mount.s3ql and fsck.s3ql got a new `--keep-cache` option. If this
    is specified, locally cached data will not be removed on unmount
    (or after fsck) so that it can be re-used if the file system is
    mounted again on the same system without having been mounted
    elsewhere.

  * S3QL now considers all SSL-related errors as temporary and
    automatically retries (instead of bailing out).

2018-10-08, S3QL 2.31

  * Object removal now makes more use of parallelism.

2018-09-02, S3QL 2.30

  * s3qladm has gained a new "recover-key" operation to restore the
    file system passphrase from an offline copy.

  * Error messages in a few situations have been improved.

  * Re-generated C files with Cython 0.28.5 - this may fix some
    compile problems under Python 3.7.

2018-07-21, S3QL 2.29

  * Removal of files that have not yet been uploaded to the backend is
    now faster, with less data being uploaded only to be removed
    shortly after.

  * Clarified NFS support in documentation.

  * contrib/clone_fs.py is now working again.

2018-06-14, S3QL 2.28
