@@ -17,6 +17,10 @@ Unreleased Changes
   * S3QL now uses python-cryptography instead of the (no longer
     maintained) pycrypto module.
 
+  * The Google Storage backend now supports Application Default
+    Credentials (ADC). To use this, install the google.auth module
+    and use ``adc`` as your backend login.
+
 2018-12-28, S3QL 2.33
 
   * Fixed a sporadic test failure in t5_cache.py.
